--- a/module3.html
+++ b/module3.html
@@ -8,7 +8,7 @@
     
     <title>Food, LLC </title>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="module3style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,600,700" rel="stylesheet">
