--- a/module3.html
+++ b/module3.html
@@ -57,8 +57,8 @@
 </header>
 
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
