--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		  </div><!--container-->
 	  </nav>
 
-	<section class="container-fluid menu">
+	<section class="container">
 		  <div class="row">
 			  <h1 class="text-center main-title">Our menu</h1
 				<div class="menu-content">
