--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-   <script src="week 4 & 5/js/ajax-utils.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="week 4 & 5/js/ajax-utils.js"></script>
   <script type="text/javascript" src="script4.js"></script>
 </body>
 </html>
